[tool.poetry]
name = "fiat-crypto-gateway-platform-b2b-transaction"
version = "0.1.0"
description = ""
authors = ["ayesigaisaac <ayesigai921@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-jose = {version = "3.3.0", extras = ["cryptography"]}
passlib = {version = "1.7.4", extras = ["bcrypt"]}
python-multipart = "0.0.9"
python-dotenv = "1.0.1"
pydantic = {version = "2.7.4", extras = ["email"]}
pydantic-settings = "2.3.4"
cbor2 = ">=5.4.6,<6.0.0"
blockfrost-python = "0.7.0"
pycardano = "0.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
